--- a/.github/workflows/mkosi.yml
+++ b/.github/workflows/mkosi.yml
@@ -82,6 +82,9 @@ jobs:
 
     - name: Configure
       run: |
+        # mkosi GHA clones and builds from main but tools are not compatible with this branch, 24.04 ships 255 which is enough
+        sudo apt install --reinstall systemd systemd-container systemd-boot systemd-ukify
+
         tee mkosi.local.conf <<- EOF
         [Distribution]
         Distribution=${{ matrix.distro }}
@@ -128,8 +131,6 @@ jobs:
         ExecStart=false
         EOF
         cp mkosi.images/initrd/mkosi.extra/usr/lib/systemd/system/emergency.service.d/poweroff.conf mkosi.images/system/mkosi.extra/usr/lib/systemd/system/emergency.service.d/poweroff.conf
-        sudo ln -svf "$(dirname "$(readlink /usr/bin/bootctl)")/systemd-keyutil" /usr/lib/systemd/systemd-keyutil
-        /usr/lib/systemd/systemd-keyutil --version
 
     - name: Generate secure boot key
       run: mkosi --debug genkey
