CI: undo mkosi.yml overwrite of systemd tools from main
The tools from main are no longer compatible with images built in this
stable branch. Ubuntu 24.04 ships with v255 which is good enough, so
restore those binaries.

(cherry picked from commit 92df356fe184fb5ddbe0b1276555271001c196db)

--- a/.github/workflows/mkosi.yml
+++ b/.github/workflows/mkosi.yml
@@ -82,6 +82,9 @@ jobs:
 
     - name: Configure
       run: |
+        # mkosi GHA clones and builds from main but tools are not compatible with this branch, 24.04 ships 255 which is enough
+        sudo apt install --reinstall systemd systemd-container systemd-boot systemd-ukify
+
         tee mkosi.conf <<- EOF
         [Distribution]
         Distribution=${{ matrix.distro }}
@@ -138,8 +141,6 @@ jobs:
         ExecStart=false
         EOF
         cp mkosi.presets/10-initrd/mkosi.extra/usr/lib/systemd/system/emergency.service.d/poweroff.conf mkosi.presets/20-final/mkosi.extra/usr/lib/systemd/system/emergency.service.d/poweroff.conf
-        sudo ln -svf "$(dirname "$(readlink /usr/bin/bootctl)")/systemd-keyutil" /usr/lib/systemd/systemd-keyutil
-        /usr/lib/systemd/systemd-keyutil --version
 
     - name: Generate secure boot key
       run: sudo mkosi --debug genkey
